--- a/styles.css
+++ b/styles.css
@@ -110,18 +110,24 @@ body {
     max-width: 500px;
     margin-top: 20px;
     text-align: center;
+    border-radius: 50px;
   }
   #rating {
     width: 100%;
     height: 30px;
-    border-radius: 10px;
+    border-radius: 50px;
   }
   #rating-message {
     margin-top: 10px;
     font-size: 16px;
   }
 
-#language-toggle {
+  #rating-image {
+    width: 50px;
+    height: 50px;
+  }
+
+  #language-toggle {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -161,13 +167,13 @@ body {
     transform: translateX(16px);
   }
 
-  /* Дополнительные стили для адаптивности */
-  @media (max-width: 600px) {
+/* Дополнительные стили для адаптивности */
+@media (max-width: 600px) {
     /* Стили для мобильных устройств */
-    body {
+    #content {
       padding: 10px; /* Добавляем отступы для мобильных устройств */
     }
-
+  
     #language-toggle {
       top: auto;
       bottom: 10px; /* Помещаем тумблер в нижний правый угол для мобильных устройств */
