убран русский язык

--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,6 @@ body {
   margin: 0;
   overflow-x: hidden; /* Disable horizontal scrolling */
 }
-/* Styles for English */
-.lang-en {
-  display: none; /* Hide English text */
-}
-/* Styles for Russian */
-.lang-ru {
-  display: block; /* Hide Russian text */
-}
 #overlay {
   position: fixed;
   top: 0;
@@ -125,50 +117,9 @@ button {
   width: 50px;
   height: 50px;
 }
-#language-toggle {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  z-index: 100; /* Поставить тумблер на передний план */
-}
-.ios-toggle {
-  position: relative;
-  width: 40px;
-  height: 24px;
-  -webkit-appearance: none;
-  background: #c6c6c6;
-  outline: none;
-  border-radius: 16px;
-  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s;
-  cursor: pointer;
-}
-.ios-toggle:checked {
-  background: #4cd964;
-}
-.ios-toggle:before {
-  content: '';
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-  top: 2px;
-  left: 2px;
-  background: #fff;
-  transition: transform 0.3s;
-}
-.ios-toggle:checked:before {
-  transform: translateX(16px);
-}
-/* Дополнительные стили для адаптивности */
 @media (max-width: 600px) {
-  /* Стили для мобильных устройств */
+  /* Styles for mobile devices */
   #content {
-    padding: 10px; /* Добавить отступы для мобильных устройств */
-  }
-  #language-toggle {
-    top: auto;
-    bottom: 10px; /* Переместить тумблер в нижний правый угол для мобильных устройств */
-    right: 10px;
+    padding: 10px; /* Add padding for mobile devices */
   }
 }
